fixed z-index for small nav-bar

--- a/app/containers/MainLanding/main-landing.scss
+++ b/app/containers/MainLanding/main-landing.scss
@@ -94,6 +94,7 @@
     display: none;
     background-color: #222222;
     width: 100%;
+    z-index: 10;
 
     &.--fixed {
       position: fixed;
